--- a/MainMenuWindow.xaml
+++ b/MainMenuWindow.xaml
@@ -28,16 +28,16 @@
                 <EventTrigger RoutedEvent="MouseEnter">
                     <BeginStoryboard>
                         <Storyboard>
-                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:1"
+                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
                                             Storyboard.TargetProperty="Background.GradientStops[0].Offset" To="-0.1">
                             </DoubleAnimation>
-                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:1"
+                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
                                             Storyboard.TargetProperty="Background.GradientStops[1].Offset" To="0.75">
                             </DoubleAnimation>
-                            <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
+                            <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.3"
                                             Storyboard.TargetProperty="Background.GradientStops[0].Color" To="#FF6AE432">
                             </ColorAnimation>
-                            <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
+                            <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.3"
                                             Storyboard.TargetProperty="Background.GradientStops[1].Color" To="#FFF3FFE6">
                             </ColorAnimation>
                         </Storyboard>
@@ -46,19 +46,14 @@
                 <EventTrigger RoutedEvent="MouseLeave">
                     <BeginStoryboard>
                         <Storyboard>
-                                <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:1"
-                                            Storyboard.TargetProperty="Background.GradientStops[0].Offset" To="0">
-                                </DoubleAnimation>
-                                <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:1"
-                                            Storyboard.TargetProperty="Background.GradientStops[1].Offset" To="1">
-                                </DoubleAnimation>
-
-                            <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
-                                            Storyboard.TargetProperty="Background.GradientStops[0].Color" To="#FF8AC542">
-                            </ColorAnimation>
-                            <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
-                                            Storyboard.TargetProperty="Background.GradientStops[1].Color" To="#FFF0FBE1">
-                            </ColorAnimation>
+                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
+                                            Storyboard.TargetProperty="Background.GradientStops[0].Offset" To="0"/>
+                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
+                                            Storyboard.TargetProperty="Background.GradientStops[1].Offset" To="1"/>
+                            <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.3"
+                                            Storyboard.TargetProperty="Background.GradientStops[0].Color" To="#FF8AC542"/>
+                            <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.3"
+                                            Storyboard.TargetProperty="Background.GradientStops[1].Color" To="#FFF0FBE1"/>
                         </Storyboard>
                     </BeginStoryboard>
                 </EventTrigger>
@@ -66,38 +61,28 @@
                 <EventTrigger RoutedEvent="PreviewMouseDown">
                     <BeginStoryboard>
                         <Storyboard>
-                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:1"
-                                            Storyboard.TargetProperty="Background.GradientStops[0].Offset" To="0.1">
-                            </DoubleAnimation>
-                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:1"
-                                            Storyboard.TargetProperty="Background.GradientStops[1].Offset" To="0.9">
-                            </DoubleAnimation>
-
+                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
+                                            Storyboard.TargetProperty="Background.GradientStops[0].Offset" To="0.1"/>
+                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
+                                            Storyboard.TargetProperty="Background.GradientStops[1].Offset" To="0.9"/>
                             <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.1"
-                                            Storyboard.TargetProperty="Background.GradientStops[0].Color" To="#FFFAA512">
-                            </ColorAnimation>
+                                            Storyboard.TargetProperty="Background.GradientStops[0].Color" To="#FFFAA512"/>
                             <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.1"
-                                            Storyboard.TargetProperty="Background.GradientStops[1].Color" To="#FFFFDD88">
-                            </ColorAnimation>
+                                Storyboard.TargetProperty="Background.GradientStops[1].Color" To="#FFFFDD88"/>
                         </Storyboard>
                     </BeginStoryboard>
                 </EventTrigger>
                 <EventTrigger RoutedEvent="PreviewMouseUp">
                     <BeginStoryboard>
                         <Storyboard>
-                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:1"
-                                            Storyboard.TargetProperty="Background.GradientStops[0].Offset" To="0">
-                            </DoubleAnimation>
-                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:1"
-                                            Storyboard.TargetProperty="Background.GradientStops[1].Offset" To="1">
-                            </DoubleAnimation>
-
+                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
+                                Storyboard.TargetProperty="Background.GradientStops[0].Offset" To="0"/>
+                            <DoubleAnimation Storyboard.TargetName="border" Duration="0:0:0.5"
+                                Storyboard.TargetProperty="Background.GradientStops[1].Offset" To="1"/>
                             <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.1"
-                                            Storyboard.TargetProperty="Background.GradientStops[0].Color" To="#FF6AE432">
-                            </ColorAnimation>
+                                Storyboard.TargetProperty="Background.GradientStops[0].Color" To="#FF6AE432"/>
                             <ColorAnimation Storyboard.TargetName="border" Duration="0:0:0.1"
-                                            Storyboard.TargetProperty="Background.GradientStops[1].Color" To="#FFF3FFE6">
-                            </ColorAnimation>
+                                Storyboard.TargetProperty="Background.GradientStops[1].Color" To="#FFF3FFE6"/>
                         </Storyboard>
                     </BeginStoryboard>
                 </EventTrigger>
