--- a/WindowSingle.xaml
+++ b/WindowSingle.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Tic_Tac_Toe_WPF_Remake"
         mc:Ignorable="d"
-        Title="Одиночная игра" Height="350" Width="228" MinWidth="339" MinHeight="350" Closing="Window_Closing" SizeChanged="Window_SizeChanged">
+        Title="Одиночная игра" Height="350" Width="459" MinWidth="339" MinHeight="350" Closing="Window_Closing" SizeChanged="Window_SizeChanged">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -15,7 +15,7 @@
         </Grid.Background>
         <Label Content="Текущий ход:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,0,0,0" Width="84"/>
         <Label x:Name="labelCurrentTurn" Content="-" HorizontalAlignment="Left" Margin="89,0,0,0" VerticalAlignment="Top"/>
-        <Canvas x:Name="canvas" Margin="10,26,10,40" Background="#FFF4FFEE" MouseMove="canvas_MouseMove" MouseLeftButtonDown="canvas_MouseLeftButtonDown">
+        <Canvas x:Name="canvas" Margin="10,26,130,10" Background="#FFF4FFEE" MouseMove="canvas_MouseMove" MouseLeftButtonDown="canvas_MouseLeftButtonDown">
             <Canvas.OpacityMask>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -23,7 +23,7 @@
                 </LinearGradientBrush>
             </Canvas.OpacityMask>
         </Canvas>
-        <Grid Height="30" VerticalAlignment="Bottom" Margin="5,0,5,5" RenderTransformOrigin="0.5,0.5">
+        <Grid Margin="0,10,5,5" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Right" Width="111">
             <Grid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFCBCCD6" Offset="0"/>
@@ -32,14 +32,13 @@
             </Grid.Background>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="buttonNewGame" Content="Новая игра" Margin="5" Click="buttonNewGame_Click"/>
-            <Button x:Name="buttonSaveGame" Content="Сохранить" Margin="5" Grid.Column="2" Click="buttonSaveGame_Click"/>
-            <Button x:Name="buttonLoadGame" Content="Загрузить" Margin="5" Grid.Column="1" Click="buttonLoadGame_Click"/>
-            <Button x:Name="buttonSettings" Content="Настройки" Margin="5" Grid.Column="3" Click="buttonSettings_Click"/>
+            <Button x:Name="buttonNewGame" Content="Новая игра" Margin="0,0,10,114" Click="buttonNewGame_Click" Height="21" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="91"/>
+            <Button x:Name="buttonSaveGame" Content="Сохранить" Margin="0,0,10,62" Click="buttonSaveGame_Click" HorizontalAlignment="Right" Width="91" Height="21" VerticalAlignment="Bottom"/>
+            <Button x:Name="buttonLoadGame" Content="Загрузить" Margin="0,0,10,88" Click="buttonLoadGame_Click" HorizontalAlignment="Right" Width="91" Height="21" VerticalAlignment="Bottom"/>
+            <Button x:Name="buttonSettings" Content="Настройки" Margin="0,0,10,36" Click="buttonSettings_Click" HorizontalAlignment="Right" Width="91" Height="21" VerticalAlignment="Bottom"/>
+            <Button x:Name="buttonExit" Content="Выход" HorizontalAlignment="Left" Margin="10,0,0,11" Width="91" Height="20" VerticalAlignment="Bottom" Click="buttonExit_Click"/>
+            <Image x:Name="imageBot" Margin="10,10,10,200"/>
         </Grid>
 
     </Grid>
